optimize front-end js

--- a/pwa-extra-credit/views/layouts/main.handlebars
+++ b/pwa-extra-credit/views/layouts/main.handlebars
@@ -52,8 +52,8 @@
     {{{ body }}}
 
 <!-- main script.js file -->
-<script type="text/javascript" src="./assets/js/calculate.js"></script>
-<script type="text/javascript" src="./assets/js/script.js"></script>
+<script type="text/javascript" src="./assets/dist/calculate.js"></script>
+<script type="text/javascript" src="./assets/dist/script.js"></script>
 
 </body>
 
